@@ -1,3 +1,11 @@
+2010-12-09  Kenneth Russell  <kbr@google.com>
+
+        Unreviewed. Speculative Gtk build fix after
+        https://bugs.webkit.org/show_bug.cgi?id=36512 / r73669. Process
+        all of the WebGL classes' IDL files.
+
+        * CMakeLists.txt:
+
 2010-12-09  Zhenyao Mo  <zmo@google.com>
 
         Reviewed by Kenneth Russell.
